Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124921

Tumbler's currentIndex is not working when the model is changed at runtime

XMLWordPrintable

    • Linux/X11, Windows
    • ca771d0a0 (dev), 6aa2a1329 (6.8), c8cc0fd38 (6.7), e5a530fca (tqtc/lts-6.5)

      When model is changed at runtime currentIndex is defaulting back to 0, ignoring the user assigned value.

      Also on explicitly setting currentIndex to some other value "onModelChanged" slot, only the value is updated but view is not updated and still currentIndex is at 0th index. Checked the same in "ListView", it works as expected there, i.e, currentIndex updates in the view also.

      Attached example reproduces the issue. 

        1. qtbug124921.zip
          3 kB
        2. OtherMain.qml
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mhqanbari MohammadHossein Qanbari
            lysandra.sola Lysandra Sola
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: